ex10/k8s/db-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: ex10
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: db-pvc
