ex10/k8s/product-deploy-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-blue
  namespace: ex10
spec:
  replicas: 3
  selector:
    matchLabels:
      app: product
      slot: blue
  template:
    metadata:
      labels:
        app: product
        slot: blue
        version: v1
    spec:
      containers:
        - name: product
          image: metacoding/product-service:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
