ex10/k8s/user-deploy-blue.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-blue
  namespace: ex10
spec:
  replicas: 3
  selector:
    matchLabels:
      app: user
      slot: blue
  template:
    metadata:
      labels:
        app: user
        slot: blue
        version: v1
    spec:
      containers:
        - name: user
          image: metacoding/user-service:1.0
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
