ex10/k8s/db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: ex10
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - port: 3306
      targetPort: 3306
