ex10/k8s/delivery-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: delivery-svc
  namespace: ex10
spec:
  type: ClusterIP
  selector:
    app: delivery
    slot: blue
  ports:
    - port: 8080
      targetPort: 8080
