ex10/k8s/user-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: user-svc
  namespace: ex10
spec:
  type: ClusterIP
  selector:
    app: user
    slot: blue
  ports:
    - port: 8080
      targetPort: 8080
