ex10/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ex10-ingress
  namespace: ex10
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-svc
                port:
                  number: 8080
          - path: /delivery(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: delivery-svc
                port:
                  number: 8080
          - path: /order(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: order-svc
                port:
                  number: 8080
          - path: /product(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: product-svc
                port:
                  number: 8080
